# CG-16-17

./: README.md
Fase1/: CMakeLists.txt  config.xml
Fase1/Source/: CMakeLists.txt
Fase1/Source/Engine/: Engine.cpp
Fase1/Source/Generator/: Generator.cpp
Fase2/: CMakeLists.txt
Fase2/Source/: CMakeLists.txt  config.xml
Fase2/Source/Engine/: Engine.cpp
Fase3/: CMakeLists.txt
Fase3/Source/: CMakeLists.txt  config.xml  configTeapot.xml
Fase3/Source/Engine/: Engine.cpp
Fase3/Source/Generator/: Generator.cpp
Fase4/: CMakeLists.txt
Fase4/Source/: CMakeLists.txt  config.xml  sphere.3d  teapot.3d
Fase4/Source/Engine/: Engine.cpp
Fase4/Source/Generator/: Generator.cpp
Fase4/compiled/: configTeapot.xml  sphere.3d  teapot.3d
